Added better (temporary) delete interaction, fixed delete order bug, added ear functionality.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 
 <body>
+	<div id="rubtoggle" style="height:20px;width:20px;background-color:black;position:absolute;left:0px;top:0px;" onclick="toggleRub()"></div>
 	<canvas id="playwindow"></canvas>
 </body>
 
