Added pulseear on right click. Still buggy.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <script src="RopesUI.js"></script>
 <script src="RopesEngine.js"></script>
 <script src="RopesAudio.js"></script>
+<script src="PulseEar.js"></script>
 
 <script>
 	main.Run();
